@@ -19,6 +19,13 @@ class Contact extends Model
     ];
 
     /**
+     * The attributes that aren't mass assignable.
+     *
+     * @var array
+     */
+    protected $guarded = ['id'];
+
+    /**
      * Eager load account with every contact.
      */
     protected $with = [
